[gd_scene load_steps=33 format=3 uid="uid://dmmx3f1sjajrm"]

[ext_resource type="Texture2D" uid="uid://bxkvq8mmhsq4s" path="res://actors/Player/Sprites/Skateboarder.png" id="2_btcbx"]
[ext_resource type="Resource" uid="uid://bbfngcgddsynv" path="res://actors/Player/Stats/PlayerStats.tres" id="2_d8ful"]
[ext_resource type="Script" uid="uid://5hhi64dp06dp" path="res://actors/Player/Components/PlayerMovementComponent.gd" id="2_ukewa"]
[ext_resource type="Script" uid="uid://bw08tl7x00q35" path="res://actors/Player/Player.gd" id="2_yf7wk"]
[ext_resource type="Script" uid="uid://1mr4bjju5rn3" path="res://actors/Player/Components/PlayerTrickComponent.gd" id="5_h27ub"]
[ext_resource type="Script" uid="uid://ymvojwef8ynu" path="res://actors/Player/Components/PlayerSoundComponent.gd" id="6_x4p6e"]
[ext_resource type="AudioStream" uid="uid://bvdmag0iacqeo" path="res://actors/Player/SkaterSounds/Rolling/sakte02.wav" id="7_a0hew"]
[ext_resource type="AudioStream" uid="uid://hd5bmcikvnmh" path="res://actors/Player/SkaterSounds/Rolling/skate01.wav" id="8_hyena"]
[ext_resource type="AudioStream" uid="uid://lcj7m468fb8d" path="res://actors/Player/SkaterSounds/Rolling/skate03.wav" id="9_pmgru"]
[ext_resource type="AudioStream" uid="uid://c1tpf15guryuj" path="res://actors/Player/SkaterSounds/JumpLand/skate_jump_up.wav" id="10_qfpmw"]
[ext_resource type="AudioStream" uid="uid://rp3jnmy0vav" path="res://actors/Player/SkaterSounds/JumpLand/Skater_landing.wav" id="11_d8ful"]
[ext_resource type="AudioStream" uid="uid://dn07wfy85nl7t" path="res://actors/Player/SkaterSounds/Hurt/player_hurt01.wav" id="12_k5to8"]
[ext_resource type="Script" uid="uid://xmavlq4gq2nx" path="res://actors/Player/Components/PlayerDamageComponent.gd" id="13_a0hew"]
[ext_resource type="AudioStream" uid="uid://dnp6f0hlk3asy" path="res://actors/Player/SkaterSounds/Hurt/player_hurt02.wav" id="13_dhpng"]
[ext_resource type="Script" uid="uid://cxoh82am01pv0" path="res://actors/Player/Components/PlayerLevelSuccsessComponent.gd" id="14_hyena"]
[ext_resource type="AudioStream" uid="uid://dskqe7f8bsyth" path="res://actors/Player/SkaterSounds/HealthAdded/HealthAdded.wav" id="14_k5to8"]
[ext_resource type="Script" uid="uid://23rpvj81yga" path="res://actors/Player/Components/PlayerGroundDetectorComponent.gd" id="15_pmgru"]
[ext_resource type="Script" uid="uid://b073hep486fp1" path="res://actors/Player/Components/PlayerHealthComponent.gd" id="16_qfpmw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gto5a"]
friction = 0.12

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ci4g"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rva1s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3bpu6"]
radius = 6.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wr34r"]
radius = 4.457737
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0tber"]
radius = 6.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tsqsm"]
radius = 4.457737
height = 25.274994

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pfqg0"]
radius = 3.0
height = 74.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gto5a"]
radius = 3.1622777

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qmmny"]
random_pitch = 1.05
random_volume_offset_db = 0.1
streams_count = 3
stream_0/stream = ExtResource("7_a0hew")
stream_1/stream = ExtResource("8_hyena")
stream_2/stream = ExtResource("9_pmgru")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qvm02"]
random_pitch = 1.15
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("10_qfpmw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_52gug"]
random_pitch = 1.15
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("11_d8ful")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ut1wf"]
random_pitch = 1.25
random_volume_offset_db = 5.0
streams_count = 2
stream_0/stream = ExtResource("12_k5to8")
stream_1/stream = ExtResource("13_dhpng")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gto5a"]
radius = 48.0
height = 96.0

[node name="Player" type="Node2D"]
script = ExtResource("2_yf7wk")
stats_template = ExtResource("2_d8ful")

[node name="SkatingPhysics" type="RigidBody2D" parent="."]
collision_layer = 2
mass = 60.0
physics_material_override = SubResource("PhysicsMaterial_gto5a")
center_of_mass_mode = 1
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 3
linear_damp = 0.5
angular_damp_mode = 1
angular_damp = 3.0

[node name="Camera2D" type="Camera2D" parent="SkatingPhysics"]

[node name="Visuals" type="Node2D" parent="SkatingPhysics"]

[node name="SkaterSprite" type="Sprite2D" parent="SkatingPhysics/Visuals"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_btcbx")

[node name="CollisionSkaterBody" type="CollisionShape2D" parent="SkatingPhysics" groups=["HurtPlayer"]]
unique_name_in_owner = true
position = Vector2(-4, -10)
shape = SubResource("CapsuleShape2D_3ci4g")

[node name="CollisionSkaterHead" type="CollisionShape2D" parent="SkatingPhysics" groups=["HurtPlayer"]]
unique_name_in_owner = true
position = Vector2(5, -33)
shape = SubResource("CircleShape2D_rva1s")

[node name="CollisionSkaterLegUpperRear" type="CollisionShape2D" parent="SkatingPhysics" groups=["HurtPlayer"]]
unique_name_in_owner = true
position = Vector2(-10, 9)
shape = SubResource("CapsuleShape2D_3bpu6")

[node name="CollisionSkaterLegLowerRear" type="CollisionShape2D" parent="SkatingPhysics" groups=["HurtPlayer"]]
unique_name_in_owner = true
position = Vector2(-14.000002, 23.000002)
rotation = 0.54391706
shape = SubResource("CapsuleShape2D_wr34r")

[node name="CollisionSkaterLegUpperFront" type="CollisionShape2D" parent="SkatingPhysics" groups=["HurtPlayer"]]
unique_name_in_owner = true
position = Vector2(6, 4)
rotation = -0.8342266
shape = SubResource("CapsuleShape2D_0tber")

[node name="CollisionSkaterLegLowerFront" type="CollisionShape2D" parent="SkatingPhysics" groups=["HurtPlayer"]]
unique_name_in_owner = true
position = Vector2(11.000002, 20.000002)
rotation = 0.27890038
shape = SubResource("CapsuleShape2D_tsqsm")

[node name="CollisionSkateboard" type="CollisionShape2D" parent="SkatingPhysics"]
unique_name_in_owner = true
position = Vector2(-1, 35)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_pfqg0")

[node name="CollisionFrontWheel" type="CollisionShape2D" parent="SkatingPhysics"]
position = Vector2(19, 41)
shape = SubResource("CircleShape2D_gto5a")

[node name="CollisionRearWheel" type="CollisionShape2D" parent="SkatingPhysics"]
position = Vector2(-22, 41)
shape = SubResource("CircleShape2D_gto5a")

[node name="Components" type="Node2D" parent="SkatingPhysics"]
unique_name_in_owner = true

[node name="MovementComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("2_ukewa")

[node name="ApplyForcePosition" type="Marker2D" parent="SkatingPhysics/Components/MovementComponent"]
unique_name_in_owner = true
position = Vector2(-1, 35)

[node name="TrickComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("5_h27ub")

[node name="SoundComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("6_x4p6e")

[node name="SakterSounds" type="Node2D" parent="SkatingPhysics/Components/SoundComponent"]
unique_name_in_owner = true

[node name="RollingSound" type="AudioStreamPlayer2D" parent="SkatingPhysics/Components/SoundComponent/SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_qmmny")
autoplay = true

[node name="JumpSound" type="AudioStreamPlayer2D" parent="SkatingPhysics/Components/SoundComponent/SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_qvm02")

[node name="LandingSound" type="AudioStreamPlayer2D" parent="SkatingPhysics/Components/SoundComponent/SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_52gug")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="SkatingPhysics/Components/SoundComponent/SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ut1wf")

[node name="HealthAdded" type="AudioStreamPlayer" parent="SkatingPhysics/Components/SoundComponent/SakterSounds"]
unique_name_in_owner = true
stream = ExtResource("14_k5to8")

[node name="DamageComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("13_a0hew")

[node name="Timers" type="Node2D" parent="SkatingPhysics/Components/DamageComponent"]

[node name="StandUpTimer" type="Timer" parent="SkatingPhysics/Components/DamageComponent/Timers"]
unique_name_in_owner = true

[node name="InvincibleTimer" type="Timer" parent="SkatingPhysics/Components/DamageComponent/Timers"]
unique_name_in_owner = true

[node name="LevelSuccsessComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("14_hyena")

[node name="LevelSuccsessDedector" type="Area2D" parent="SkatingPhysics/Components/LevelSuccsessComponent" groups=["PlayerArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkatingPhysics/Components/LevelSuccsessComponent/LevelSuccsessDedector"]
shape = SubResource("CapsuleShape2D_gto5a")
debug_color = Color(0.95686275, 0, 0.5294118, 0.08627451)

[node name="GroundDetectorComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("15_pmgru")

[node name="CanJumpRay" type="RayCast2D" parent="SkatingPhysics/Components/GroundDetectorComponent"]
unique_name_in_owner = true
position = Vector2(0, 34)
target_position = Vector2(0, 27)

[node name="OnGroundRayFront" type="RayCast2D" parent="SkatingPhysics/Components/GroundDetectorComponent"]
unique_name_in_owner = true
position = Vector2(19, 34)
target_position = Vector2(0, 20)

[node name="OnGroundRayRear" type="RayCast2D" parent="SkatingPhysics/Components/GroundDetectorComponent"]
unique_name_in_owner = true
position = Vector2(-22, 33)
target_position = Vector2(0, 20)

[node name="HealthComponent" type="Node2D" parent="SkatingPhysics/Components"]
unique_name_in_owner = true
script = ExtResource("16_qfpmw")

[node name="CenterOfMassPosition" type="Marker2D" parent="SkatingPhysics"]
unique_name_in_owner = true
position = Vector2(1, 19)

[connection signal="body_shape_entered" from="SkatingPhysics" to="SkatingPhysics" method="_on_body_shape_entered"]
[connection signal="timeout" from="SkatingPhysics/Components/DamageComponent/Timers/StandUpTimer" to="SkatingPhysics/Components/DamageComponent" method="_stand_up"]
[connection signal="timeout" from="SkatingPhysics/Components/DamageComponent/Timers/InvincibleTimer" to="SkatingPhysics/Components/DamageComponent" method="_became_vulnerable"]
[connection signal="area_entered" from="SkatingPhysics/Components/LevelSuccsessComponent/LevelSuccsessDedector" to="SkatingPhysics/Components/LevelSuccsessComponent" method="_on_area_2d_area_entered"]
